communicating with django works fine